fix: fixed broken styles for logos and disable goodhands banner

--- a/assets/styles/components/_GoodHands.scss
+++ b/assets/styles/components/_GoodHands.scss
@@ -126,3 +126,11 @@
 		}
 	}
 }
+
+body.category-blog,
+body.post-type-archive-ms_awards {
+
+	.GoodHands {
+		display: none;
+	}
+}
